--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,26 @@
     <sourceDirectory>src</sourceDirectory>
     <plugins>
       <plugin>
+<groupId>org.apache.maven.plugins</groupId>
+<artifactId>maven-dependency-plugin</artifactId>
+<executions>
+<execution>
+<phase>package</phase>
+<goals><goal>copy</goal></goals>
+<configuration>
+<artifactItems>
+<artifactItem>
+<groupId>com.github.jsimone</groupId>
+<artifactId>webapp-runner</artifactId>
+<version>8.0.30.2</version>
+<destFileName>webapp-runner.jar</destFileName>
+</artifactItem>
+</artifactItems>
+</configuration>
+</execution>
+</executions>
+</plugin>
+      <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.0</version>
         <configuration>
